# moodle-scraper

./: .env  .pre-commit-config.yaml  README.md  pyproject.toml  scraper.py
.github/workflows/: run-pre-commit.yml
handlers/: monday.py  moodle.py
models/: assign.py  column_names.py
parsers/: assign.py
